engine-net-2/examples/Errors/IndexAccessDirectionUnknown.grs
new graph "Rules.grg"

exec for{v:N in {asc(idx>7)}; true}

quit
